--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   isar: 2.5.0
   isar_flutter_libs: 2.5.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   isar_generator: 2.5.0
