--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
 
 dev_dependencies:
   isar_generator: 2.5.0
-  build_runner: any
+  build_runner: ^2.2.0
   flutter_test:
     sdk: flutter
 
