--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   isar: 2.5.0
   isar_flutter_libs: 2.5.0
   path_provider: ^2.0.11
+  hooks_riverpod: ^1.0.4
 
 dev_dependencies:
   isar_generator: 2.5.0
