--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.6
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.4.7
+  firebase_auth: ^3.8.0
 
 dev_dependencies:
   flutter_test:
