--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hooks_riverpod: ^1.0.4
+  flutter_hooks: ^0.18.5+1
+  freezed_annotation: ^2.1.0
+  state_notifier: ^0.7.2+1
+  json_annotation: ^4.6.0
   table_calendar: ^3.0.6
   firebase_core: ^1.22.0
   cloud_firestore: ^3.4.7
@@ -49,6 +54,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.0
+  freezed: ^2.1.0+1
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
