--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.expressive_writing">
    <application
-        android:label="expressive_writing"
+        android:label="筆記療法アプリ"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
