--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ dev_dependencies:
   freezed: ^2.1.0+1
   json_serializable: ^6.3.1
   logger: ^1.1.0
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
